adding circleci config file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,7 @@ jobs:
             . venv/bin/activate
             make lint
             
-workflow:
- docker-ci:
-  - build
+workflows:
+    docker-ci:
+        jobs:
+            - build
