--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,4 @@
-version: 2
+version: 2.1
 jobs:
   build:
     docker:
@@ -24,6 +24,7 @@ jobs:
             python3 -m venv venv
             . venv/bin/activate
             make install
+            
       - save_cache:
           paths:
             - ./venv
@@ -34,8 +35,7 @@ jobs:
           command: |
             . venv/bin/activate
             make lint
-            
 workflows:
-    docker-ci:
-        jobs:
-            - build
+  udacity:
+     jobs:
+      - build
